--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,35 @@ header p {
   background-color: #FFFFFF;
   text-align: center;
 }
+.caseStudies {
+  font-size: 54px;
+  text-align: center;
+}
+.mySkills {
+  font-size: 54px;
+  text-align: center;
+}
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  text-align: center;
+  font-size: 20px;
+  padding: 50px;
+}
+.flex-container div {
+  flex-grow: 1;
+  width: 100%;
+  padding: 65px;
+}
+.grid-container {
+  display: grid; 
+  grid-template-rows: 500px 500px 500px;
+  justify-content: space-evenly;
+  text-align: center;
+  font-size: 20px;
+  padding: 50px;
+}
 button {
   padding: 15px;
   background-color: #373738;
@@ -47,4 +76,17 @@ footer ul {
 footer li {
   display: inline-block;
   padding: 0px 7px;
+}
+@media only screen and (max-width:600) {
+  .flex-container div: column;
+  width: 100%;
+#categoryGrid 
+  margin: 0px 5%;
+  display: grid;
+  grid-template-rows: 300px 300px 300px;
+  grid-template-colums: 1fr 1fr 1fr;
+  grid-template-areas:
+  "Project1"
+  "Project2"
+  "Project3";
 }
